--- a/CHEAR_univariate_analysis.Rmd
+++ b/CHEAR_univariate_analysis.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(xmsPANDA)
 ```
 
 ## Univariate Metabolomics Analysis - Comparing NASH vs. Non-NASH:
@@ -24,12 +25,12 @@ Then, the code calls the **xmsPANDA** function diffexp() and runs the univariate
 
 The metabolomics data being run is the **HILIC positive data**. Upon completion of the code, we have asked R to print the p-value for each m/z  in the "best set of discriminatory metabolites."
 
-```{r}
-library(xmsPANDA)
+```{r, eval=FALSE}
+#Turn eval to TRUE to run this code...
 
-feature_table_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/xmspanda_HILIC/featuretable_v2.txt"
-class_labels_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/xmspanda_HILIC/classlabels_NASH.txt"
-outloc_univariate<-"/Users/cecioff/Desktop"
+feature_table_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/HILIC/R_output_data/featuretable.txt"
+class_labels_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/HILIC/R_output_data/classlabels.txt"
+outloc_univariate<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/HILIC/univariate"
 
 #linear regrssion;adjust for age and sex; no RSD filtering; 50% per group missing.
 results_univariate1 <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_table_file,
@@ -63,20 +64,11 @@ results_univariate1 <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_
         pls.permut.count = 100, svm.acc.tolerance = 5)
 ```
 
-```{r}
-results_univariate1$diffexp_metabs
-```
-
 ## UNIVARIATE ANALYSIS - continued:
 
 Same analysis as above, now using more stringent FDR of < 0.20.
 
-```{r}
-#read in files for inflammation comparison;
-feature_table_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/xmspanda_HILIC/featuretable_v2.txt"
-class_labels_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/xmspanda_HILIC/classlabels_NASH.txt"
-outloc_univariate<-"/Users/cecioff/Desktop"
-
+```{r, echo=TRUE, eval=FALSE}
 #linear regrssion;adjust for age and sex; no RSD filtering; 70% per group missing. FDR < 0.20.
 results_univariate <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_table_file,
         parentoutput_dir=outloc_univariate, class_labels_file=class_labels_file, 
@@ -91,7 +83,7 @@ results_univariate <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_t
         rsd.filt.list = FALSE, pairedanalysis = FALSE,
         featselmethod = "lmreg", fdrthresh = 0.20, fdrmethod = "BH",
         cor.method = "spearman", networktype = "complete",
-        abs.cor.thresh = 0.4, cor.fdrthresh = 0.30, kfold = 5,
+        abs.cor.thresh = 0.4, cor.fdrthresh = 0.20, kfold = 5,
         pred.eval.method = "AUC", feat_weight = 1, globalcor = FALSE,
         target.metab.file = NA, target.mzmatch.diff = 10,
         target.rtmatch.diff = NA, max.cor.num = 100, samplermindex = NA,
@@ -107,10 +99,7 @@ results_univariate <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_t
         legendlocation = "topleft", degree_rank_method = "overall",
         pca.cex.val = 4, pca.ellipse = FALSE, ellipse.conf.level = 0.95,
         pls.permut.count = 100, svm.acc.tolerance = 5)
-```
 
-```{r}
-results_univariate$diffexp_metabs
 ```
 
 #MANHATTAN PLOT - METABOLOMICS DATA:
@@ -120,7 +109,7 @@ First we will generate two manhattan plots: 1) Type 1 shows m/z on the x-axis an
 ```{r}
 library(readr)
 #read in manhattan plot specific dataset:
-MP_input <- read_delim("C:/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/xmspanda_HILIC/manhattan/MP_input_NASH.txt", 
+MP_input <- read_delim("C:/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/HILIC/manhattan/MP_input_NASH.txt", 
                        "\t", escape_double = FALSE, trim_ws = TRUE)
 
 #TYPE 1 MANHATTAN PLOT;
@@ -148,10 +137,11 @@ Next, we will generate a two-way heirarchical cluster analysis heat map. The fea
 
 ```{r}
 #read in HCA specific feature table:
-feature_table_HCA<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/xmspanda_HILIC/featuretable_HCA_NASH_p0.001.txt"
+feature_table_HCA<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/HILIC/featuretable_HCA_NASH_p0.001.txt"
 
 #designate output location:
-outloc_HCA<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/xmspanda_HILIC/HCA"
+outloc_HCA<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_Panel/HILIC/HCA"
+class_labels_file<-"/Users/cecioff/Desktop/metabolomics/_CHEAR/NASH_panel/HILIC/R_output_data/classlabels.txt"
 
 #heirarchical cluster analysis - user input parameters;
 HCA_p0_001 <- get_hca(feature_table_file=feature_table_HCA, parentoutput_dir=outloc_HCA,
@@ -205,10 +195,6 @@ results_univariate <- diffexp(Xmat = NA, Ymat = NA, feature_table_file=feature_t
         legendlocation = "topleft", degree_rank_method = "overall",
         pca.cex.val = 4, pca.ellipse = FALSE, ellipse.conf.level = 0.95,
         pls.permut.count = 100, svm.acc.tolerance = 5)
-```
-
-```{r}
-results_univariate$diffexp_metabs
 ```
 
 #MANHATTAN PLOT - METABOLOMICS DATA:
